<resources>
    <string name="app_name">ProyectoMusica</string>
    <string name="imagen">imagenes</string>
    <string name="titulo1">Twenty One Pilots</string>
    <string name="btn1">Introduccion</string>
    <string name="btn2">Estilo de musica</string>
    <string name="btn3">Nombre de la banda</string>
    <string name="btn4">Integrantes</string>
    <string name="btn5">2009 - 2011</string>
    <string name="btn6">Button</string>
    <string name="btn7">2011-2013</string>
    <string name="btn8">2012-2014</string>
    <string name="btn9">2015-2017</string>
    <string name="btn10">2018-actualidad</string>
    <string name="btn11">Ultimo disco</string>
    <string name="titulo2">Introduccion</string>
    <string name="titulo3">Estilo de musica</string>
    <string name="titulo4">Nombre de Banda</string>
    <string name="titulo5">Integrantes</string>
    <string name="btn20">Integrantes</string>
    <string name="btn21">Introduccion</string>
    <string name="btn22">Estilo de musica</string>
    <string name="btn23">Nombre de banda</string>
    <string name="btn24">Ultimo disco</string>
    <string name="btn25">2009-0211</string>
    <string name="btn26">2011-2013</string>
    <string name="btn27">2012-2014</string>
    <string name="btn28">2015-2017</string>
    <string name="btn29">2018-Actualidad</string>
    <string name="btn30">Menu prinipal</string>
    <string name="titulo6">Ultimo disco</string>
    <string name="btn31">Menu principal</string>
    <string name="btn32">Menu principal</string>
    <string name="btn33">Menu principal</string>
    <string name="btn41">Menu principal</string>
    <string name="btn34">Menu principal</string>
    <string name="btn35">Menu principal</string>
    <string name="btn36">Menu principal</string>
    <string name="btn37">Menu principal</string>
    <string name="btn38">Menu principal</string>
    <string name="titulo7">2009-2011: Formación y álbum homónimo</string>
    <string name="titulo9">2011-2013: Regional at Best y contrato discográfico con Fueled by Ramen</string>
    <string name="titulo10">2012-2014: Vessel, debut en televisión y Quiet Is Violent World Tour</string>
    <string name="titulo11">2015-2017: Blurryface y Emotional Roadshow World Tour</string>
    <string name="titulo12">2018-actualidad: Trench y The Bandito Tour</string>
    <string name="btn42">Menu principal</string>
    <string name="btn40">Menu principal</string>
    <string name="texto1">La banda fue formada en 2009 en Columbus, Ohio, por un par de amigos universitarios Tyler Joseph, Nick Thomas y Chris Salih. A Tyler se le ocurrió el nombre de la banda mientras estudiaba el libro All My Sons de Arthur Miller,3​ una obra sobre un padre de familia que vendía piezas para aviones durante la Segunda Guerra Mundial, un día le llegan piezas defectuosas y decide venderlas, causando la muerte de veintiún pilotos.</string>
    <string name="texto3">Tyler Joseph explica que el dilema moral de la historia fue la inspiración para el nombre de la banda. El 29 de diciembre de 2009, lanzaron su álbum debut-independiente, titulado Twenty One Pilotsy comenzaron una pequeña gira en Ohio. En 2010, la banda lanzó dos canciones inéditas oficialmente a su cuenta en SoundCloud. La primera, una canción original, titulada Time to Say Goodbye, y una versión de «Jar of Hearts» de Christina Perri. A mediados del 2011, Thomas y Salih abandonaron la banda, entonces Tyler se unió con Josh Dun. Ambos publicaron su despedida en la página oficial de Facebook de la banda.</string>
    <string name="texto7">Twenty One Pilots (estilizado como twenty øne piløts, y abreviado como TØP) es un dúo musical estadounidense originario de Columbus, Ohio. La banda fue formada en 2009 por el vocalista Tyler Joseph junto a los ex miembros Nick Thomas y Chris Salih, quienes se retiraron en 2011. Estos alcanzaron la fama a mediados de 2010 después de haber hecho lanzamientos independientes y tours durante varios años. Actualmente la banda está conformada por el cantante, compositor y multinstrumentista Tyler Joseph, junto con el baterista Josh Dun.</string>
    <string name="texto8">Adicionalmente, el sencillo «Heathens», grabado como parte de la banda sonora de la película Suicide Squad, convirtió al dúo en ser el primer artista alternativo en tener dos sencillos entre los diez mejores en Estados Unidos de manera simultánea. El grupo también ha ganado un premio Grammy en la categoría Mejor Dúo/Rock alternativo en el año 2017.</string>
    <string name="texto15">Es difícil categorizar a la banda usando solamente un género, ya que encajan dentro de varios. Se ha atribuido esto parcialmente al hecho de que, tanto Joseph como Dun, son músicos autodidactas, lo que implica que mientras producen su trabajo rompen muchas convenciones musicales de las que no son conscientes, incluyendo estar confinado a un único género.</string>
    <string name="texto16">Instrumentalmente, Twenty One Pilots tiene una mezcla de piano (algunas veces un teclado eléctrico o una keytar), sintetizadores, batería (también mezclada con batería eléctrica en algunas partes), voz y ocasionalmente ukelele, trompetas, pandero o bajo. Líricamente, sus canciones son escritas por Joseph, quién incorpora tanto rap como canto en sus letras.</string>
    <string name="texto20">Tyler se le ocurrió el nombre de la banda mientras estudiaba el libro All My Sons de Arthur Miller, una obra sobre un padre de familia que vendía piezas defectuosas para aviones durante la Segunda Guerra Mundial. En dicha obra, mueren veintiún pilotos. Tyler Joseph explica que el dilema moral de la historia y escoger entre una decisión fácil y correcta fue la inspiración para el nombre de la banda.23​ Posteriormente se reveló que Bicycle Thief y Chill Coat fueron algunos de los nombres descartados para la banda.</string>
    <string name="texto25">Formacion actual</string>
    <string name="texto26">+ Tyler Joseph: Vocalista, piano, ukelele, bajo, keytar, sintetizadores, guitarra, pandereta, percusiones (2009-presente)</string>
    <string name="texto27">+ Josh Dun: batería, trompeta, percusiones, pandereta (2011-presente)</string>
    <string name="texto28">Exintegrantes</string>
    <string name="texto29">+ Nick Thomas: Bajo, piano, teclado (2009-2011).</string>
    <string name="texto30">+ Chris Salih: Batería, percusión (2009-2011).</string>
    <string name="texto35">En marzo de 2018, su canción «Hometown» recibió una certificación Gold de la RIAA , convirtiendo a Blurryface en el primer álbum de larga duración en tener todas las canciones logrando al menos el disco de oro.</string>
    <string name="texto36">En julio de 2018, Twenty One Pilots rompió su silencio de más de un año, primero enviando un críptico correo electrónico a los fanáticos y luego publicando un vídeo en todas las plataformas de redes sociales y actualizando su logotipo y marca</string>
    <string name="texto37">En 2019, la banda anunciaría un sencillo más de su álbum Trench; «Chlorine», el cual llegaría al puesto número 6 en los Billboard Top Rock Songs Chart, número 1 en los Billboard Top Alternative Songs Chart , y alcanzaría los 100+ millones de vistas en el vídeo musical subido a Youtube</string>
    <string name="texto38">Su segundo álbum independiente, Regional at Best, fue lanzado el 8 de julio de 2011, fue grabado en su mayoría con los integrantes originales ya que se pueden ver varios vídeos en vivo de la banda tocando canciones de Regional at Best con Nick y Thomas, terminando luego con un nuevo alineamiento que solo consta de Joseph y Dun. En noviembre del 2011, dieron un concierto en Columbus\' Newport Music Hall que atrajo la atención de docenas de compañías discográficas. Aunque muchas de esas compañías se peleaban por la banda, se decidió que firmarían con el sello de Atlantic Records, subsidiada por Fueled by Ramen. Luego de firmar se inició la grabación de su próximo álbum, regrabando las anteriores y cancelando las ventas de RAB, es por eso que hay pocas unidades físicas originales. Durante ese mismo año, el dúo dio a sus fans dos canciones inéditas a través de su boletín de correo electrónico: la versión original de \"House of Gold\" y una canción titulada \"Two\".</string>
    <string name="texto40">En abril de 2012, en un concierto agotado en el Lifestyle Communities Pavilion, se anunciaron bajo el sello de Atlantic Records, subsidiaria de Fueled by Ramen. El 17 de julio de 2012, lanzaron su álbum debut con Fueled by Ramen en forma de EP con tres canciones, titulado Three Songs. En agosto de 2012, se embarcó una pequeña gira con Neon Trees y Walk the Moon. Trabajaron con Greg Wells, productor de Adele y Katy Perry, en su primer álbum de larga duración bajo el sello de Fueled by Ramen. Vessel fue lanzado el 8 de enero de 2013 y obtuvo el puesto 58 en el Billboard 200,4​ el 42 en la tabla de álbumes digitales, 17 en la tabla de álbumes de internet, 15 en la tabla de álbumes Rock y 10 en la tabla de álbumes Alternativos.</string>
    <string name="texto45">El 17 de mayo de 2015, Twenty One Pilots lanzó su cuarto álbum de estudio, Blurryface, 2 días antes de la fecha oficial de lanzamiento, el 19 de mayo de 2015. En febrero de 2016, la canción Stressed Out alcanzó el puesto No. 2 en el Billboard Top-Five Single. En marzo del mismo año, el álbum ya había vendido 792 000 copias sólo en Estados Unidos. Blurryface alcanzó también el puesto No. 1 en el Top Billboard 200.El 31 de mayo de 2016 comenzaba en Cincinnati lo que sería la segunda gira de Blurryface, Emotional Roadshow World Tour, contando con la colaboración de Jon Bellion para los conciertos que se llevarían a cabo en EE.UU.</string>
</resources>
